--- a/models.html
+++ b/models.html
@@ -57,7 +57,7 @@
                         <div class="clean-card-content">
                             <h3>Apache RR 310</h3>
                             <div class="price">The Ultimate Track Machine</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -66,7 +66,7 @@
                         <div class="clean-card-content">
                             <h3>Apache RTR 200 4V</h3>
                             <div class="price">Engineered To Outperform</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -75,7 +75,7 @@
                         <div class="clean-card-content">
                             <h3>Apache RTR 160 4V</h3>
                             <div class="price">Unleash The Racing DNA</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -84,7 +84,7 @@
                         <div class="clean-card-content">
                             <h3>TVS Ronin</h3>
                             <div class="price">Unscripted Life</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -93,7 +93,7 @@
                         <div class="clean-card-content">
                             <h3>TVS Raider 125</h3>
                             <div class="price">The Wicked Ride</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -102,7 +102,7 @@
                         <div class="clean-card-content">
                             <h3>TVS Radeon</h3>
                             <div class="price">Solid. Strong. Stylish.</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -111,7 +111,7 @@
                         <div class="clean-card-content">
                             <h3>TVS Sport</h3>
                             <div class="price">Mileage Ka Baap</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
                 </div>
@@ -128,7 +128,7 @@
                         <div class="clean-card-content">
                             <h3>New Jupiter 110</h3>
                             <div class="price">Zyada Ka Fayda</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -137,7 +137,7 @@
                         <div class="clean-card-content">
                             <h3>Jupiter 125</h3>
                             <div class="price">Zyada Se Bhi Zyada</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -146,7 +146,7 @@
                         <div class="clean-card-content">
                             <h3>TVS Ntorq 125</h3>
                             <div class="price">Play Smart</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
 
@@ -155,7 +155,7 @@
                         <div class="clean-card-content">
                             <h3>Scooty Zest 110</h3>
                             <div class="price">Compact Power</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
                 </div>
@@ -172,7 +172,7 @@
                         <div class="clean-card-content">
                             <h3>TVS iQube</h3>
                             <div class="price">Smartly Simple</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
                 </div>
@@ -189,7 +189,7 @@
                         <div class="clean-card-content">
                             <h3>XL100 Heavy Duty</h3>
                             <div class="price">The Multi-Utility Vehicle</div>
-                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
+                            <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                         </div>
                     </a>
                 </div>
@@ -214,6 +214,10 @@
         </div>
         <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div>
     </footer>
+
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
