--- a/about.html
+++ b/about.html
@@ -12,96 +12,64 @@
     <header class="main-header">
         <div class="container header-top">
             <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <div class="header-btn-group">
-                <a href="index.html" class="btn-header">Back to Home</a>
+                <a href="service.html" class="btn-header">Book Service</a>
+                <a href="quotation.html" class="btn-header">Get Quotation</a>
+                <a href="testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
         <div class="nav-bar" id="navMenu">
             <div class="container">
-                <ul class="nav-menu" style="justify-content:center;">
+                <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="about.html" style="color:var(--primary);">About TVS</a></li>
-                    <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="about.html" style="color: var(--primary); font-weight:bold;">About Us</a></li>
+                    <li class="nav-item"><a href="models.html">All Models</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="models-header" style="background: #1a3b8c; color: white; padding: 60px 0; text-align: center;">
+    <div class="section-padding">
         <div class="container">
-            <h1 style="font-size: 3.5rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">The TVS Legacy</h1>
-            <p>Over 100 Years of Trust, Innovation, and Service.</p>
+            <div class="welcome-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center;">
+                <div class="welcome-text">
+                    <span style="font-weight: bold; background: rgba(11, 35, 81, 0.1); color: var(--primary); padding: 5px 15px; border-radius: 30px; font-size: 0.85rem; letter-spacing: 1px;">SINCE 2010</span>
+                    <h2 style="font-family: 'Oswald'; font-size: 3rem; margin: 20px 0; color: var(--primary); text-transform: uppercase;">About Tirumala TVS</h2>
+                    <p style="margin-bottom: 25px; line-height: 1.8;">Tirumala TVS is a premier authorized dealership for TVS Motor Company located in Bidarahalli, Bangalore. We pride ourselves on customer satisfaction, transparent dealings, and superior after-sales service.</p>
+                    <p style="margin-bottom: 25px; line-height: 1.8;">Our state-of-the-art showroom showcases the entire range of TVS two-wheelers, from the sporty Apache series to the family-friendly Jupiter. Our service center is equipped with the latest tools and certified technicians to keep your vehicle in top condition.</p>
+                </div>
+                <div class="welcome-image">
+                    <img src="assets/apache160.jpg" alt="Tirumala TVS Team" style="border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); width: 100%;">
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="container">
-        <div class="action-bar">
-            <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
-            <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946511" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
-            <a href="tel:+919964946511" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
-        </div>
-    </div>
-
-    <section class="section-padding">
-        <div class="container">
-            <div class="welcome-text text-center" style="max-width: 800px; margin: 0 auto;">
-                <span class="badge" style="position:static; display:inline-block; margin-bottom:15px;">AUTHORIZED DEALER</span>
-                <h2 style="font-size: 2.5rem; color: #1a3b8c; font-family: 'Oswald', sans-serif;">Welcome to Tirumala TVS</h2>
-                <p style="font-size: 1.1rem; line-height: 1.8; color: #555;">
-                    Located in <strong>Bidarahalli, Bangalore</strong>, we are proud to represent TVS Motor Company. 
-                    Our mission is to bring the world-class engineering of TVS to your doorstep with unmatched customer service.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-padding bg-light">
-        <div class="container">
-            <div class="text-center section-header" style="margin-bottom: 50px;">
-                <h2 style="font-family: 'Oswald', sans-serif; color: #d32f2f;">A to Z of TVS Motor Company</h2>
-                <p>From a bus service in 1911 to a global motorcycle giant today.</p>
-            </div>
-
-            <div class="history-grid">
-                <div class="history-card"><h3>1911</h3><p>Foundation of TVS Group.</p></div>
-                <div class="history-card"><h3>1980</h3><p>India's First 2-Seater Moped.</p></div>
-                <div class="history-card"><h3>1982</h3><p>Birth of TVS Racing.</p></div>
-                <div class="history-card"><h3>2002</h3><p>Deming Prize Winner.</p></div>
-                <div class="history-card"><h3>2013</h3><p>BMW Partnership.</p></div>
-                <div class="history-card"><h3>2020</h3><p>Acquisition of Norton.</p></div>
-            </div>
-        </div>
-    </section>
 
     <footer>
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46511</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div>tirumalatvs716@gmail.com</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div>Sales: +91 99649 46512</div></div>
             </div>
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="models.html">All Models</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
         </div>
-        <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div>
     </footer>
 
-    <a href="https://wa.me/919964946511" class="whatsapp-float" target="_blank">💬</a>
-    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-
     <script>
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } 
-            else { scrollBtn.classList.remove('visible'); }
-        });
+        function toggleMenu() {
+            var nav = document.getElementById("navMenu");
+            nav.style.display = (nav.style.display === "block") ? "none" : "block";
+            if(nav.style.display === "block") { nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
+        }
     </script>
-
 </body>
 </html>
