--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="main-header">
         <div class="container header-top">
             <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
+            
             <div class="menu-toggle" onclick="toggleMenu()">☰</div>
             <div class="header-btn-group">
                 <a href="service.html" class="btn-header">Book Service</a>
@@ -109,9 +110,10 @@
     <section class="section-padding bg-light">
         <div class="container">
             <div class="text-center section-header">
-                <h2>Top Selling Vehicles</h2>
+                <h2>6 Hot Selling Vehicles</h2>
                 <p>Our customers' favorite rides.</p>
             </div>
+            
             <div class="grid-3">
                 <a href="models/jupiter113.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
@@ -137,6 +139,30 @@
                         <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
                     </div>
                 </a>
+                <a href="models/iqube.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'"></div>
+                    <div class="clean-card-content">
+                        <h3>TVS iQube</h3>
+                        <div class="price">Smartly Simple</div>
+                        <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
+                    </div>
+                </a>
+                <a href="models/zest110.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
+                    <div class="clean-card-content">
+                        <h3>Scooty Zest 110</h3>
+                        <div class="price">Compact Power</div>
+                        <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
+                    </div>
+                </a>
+                <a href="models/apache160.html" class="clean-card">
+                    <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
+                    <div class="clean-card-content">
+                        <h3>Apache RTR 160 4V</h3>
+                        <div class="price">Racing DNA</div>
+                        <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:10px;">View Details</span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
@@ -144,57 +170,40 @@
     <section class="section-padding">
         <div class="container">
             <div class="text-center section-header">
-                <h2>Awards & Achievements</h2>
-                <p>Excellence in every ride we deliver.</p>
+                <h2>6 Recent Awards</h2>
+                <p>Excellence recognized globally.</p>
             </div>
             <div class="grid-3">
                 <div class="award-card">
                     <span class="award-icon">🏆</span>
-                    <h3>IMOTY 2022 Winner</h3>
-                    <p>Indian Motorcycle of the Year - <strong>TVS Raider 125</strong></p>
+                    <h3>Car & Bike Awards 2025</h3>
+                    <p>Upgrade of the Year - <strong>TVS Apache RR 310</strong></p>
                 </div>
                 <div class="award-card">
                     <span class="award-icon">🥇</span>
-                    <h3>J.D. Power Award</h3>
-                    <p>Highest in Customer Satisfaction - Two Wheeler Service</p>
+                    <h3>J.D. Power Award 2024</h3>
+                    <p>Most Appealing Economy Scooter - <strong>TVS Jupiter 110</strong></p>
+                </div>
+                <div class="award-card">
+                    <span class="award-icon">⚡</span>
+                    <h3>J.D. Power Award 2024</h3>
+                    <p>Highest Ranked Electric Scooter - <strong>TVS iQube</strong></p>
+                </div>
+                <div class="award-card">
+                    <span class="award-icon">🚀</span>
+                    <h3>Acko Drive Awards 2025</h3>
+                    <p>Best Concept Bike - <strong>TVS iQube Vision</strong></p>
+                </div>
+                <div class="award-card">
+                    <span class="award-icon">🎨</span>
+                    <h3>MotorBeam Awards 2024</h3>
+                    <p>Design of the Year - <strong>TVS Apache RTR 310</strong></p>
                 </div>
                 <div class="award-card">
                     <span class="award-icon">⭐</span>
-                    <h3>Manufacturer of the Year</h3>
-                    <p>NDTV Car & Bike Awards - TVS Motor Company</p>
+                    <h3>India Design Mark 2023</h3>
+                    <p>Best Design Project - <strong>TVS Ronin</strong></p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-padding bg-light">
-        <div class="container">
-            <div class="text-center section-header">
-                <h2>Happy Riders</h2>
-                <p>What our customers say about Tirumala TVS.</p>
-            </div>
-            <div class="grid-3">
-                <div class="clean-card" style="padding: 30px; text-align: left;">
-                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Excellent service! Bought my Ntorq 125 here. The delivery was on time and the staff explained all features clearly."</p>
-                    <strong style="color: var(--primary);">- Rahul K.</strong>
-                </div>
-                <div class="clean-card" style="padding: 30px; text-align: left;">
-                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Best showroom in Bidarahalli. Very transparent pricing and quick loan approval process. Highly recommended!"</p>
-                    <strong style="color: var(--primary);">- Priya S.</strong>
-                </div>
-                <div class="clean-card" style="padding: 30px; text-align: left;">
-                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Got my iQube electric scooter. The team guided me on the subsidy process very well."</p>
-                    <strong style="color: var(--primary);">- Sneha R.</strong>
-                </div>
-                <div class="clean-card" style="padding: 30px; text-align: left;"><div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★☆</div><p style="font-style: italic; color: #555; margin-bottom: 20px;">"Service center is good. They picked up my Apache 160 for servicing and dropped it back in the evening. Convenient."</p><strong style="color: var(--primary);">- Amit V.</strong></div>
-                <div class="clean-card" style="padding: 30px; text-align: left;"><div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div><p style="font-style: italic; color: #555; margin-bottom: 20px;">"Purchased the new Jupiter 110. The mileage is amazing and the boot space is huge. Thanks Tirumala TVS team!"</p><strong style="color: var(--primary);">- Karthik G.</strong></div>
-                <div class="clean-card" style="padding: 30px; text-align: left;"><div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div><p style="font-style: italic; color: #555; margin-bottom: 20px;">"Friendly staff and good ambience. They let me take a long test drive of the Ronin before I decided to buy."</p><strong style="color: var(--primary);">- Mohammed I.</strong></div>
-                <div class="clean-card" style="padding: 30px; text-align: left;"><div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div><p style="font-style: italic; color: #555; margin-bottom: 20px;">"Bought a Scooty Zest for my daughter. The process was smooth and they gave us a good deal on accessories."</p><strong style="color: var(--primary);">- Anjali M.</strong></div>
-                <div class="clean-card" style="padding: 30px; text-align: left;"><div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div><p style="font-style: italic; color: #555; margin-bottom: 20px;">"I was confused between Raider and Apache. The sales executive explained the differences well. Went with Raider!"</p><strong style="color: var(--primary);">- Vikram R.</strong></div>
-                <div class="clean-card" style="padding: 30px; text-align: left;"><div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★☆</div><p style="font-style: italic; color: #555; margin-bottom: 20px;">"Good stock of spare parts. I found genuine parts for my old Jupiter here which were not available elsewhere."</p><strong style="color: var(--primary);">- Suresh B.</strong></div>
             </div>
         </div>
     </section>
