--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a href="index.html" style="color: var(--accent);">Home</a></li>
                     <li class="nav-item"><a href="models.html">All Models</a></li>
                     <li class="nav-item dropdown">
-                        <a href="models.html#motorcycles">Motorcycles</a>
+                        <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/apache160.html">Apache Series</a></li>
                             <li><a href="models/raider.html">Raider 125</a></li>
@@ -34,7 +34,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="models.html#scooters">Scooters</a>
+                        <a href="models.html#scooters">Scooters <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/jupiter113.html">Jupiter 110</a></li>
                             <li><a href="models/jupiter125.html">Jupiter 125</a></li>
@@ -89,7 +89,7 @@
                 <div class="welcome-text">
                     <span style="font-weight: bold; background: rgba(11, 35, 81, 0.1); color: var(--primary); padding: 5px 15px; border-radius: 30px; font-size: 0.85rem; letter-spacing: 1px;">AUTHORIZED DEALER</span>
                     <h2 style="font-family: 'Oswald'; font-size: 3rem; margin: 20px 0; color: var(--primary); text-transform: uppercase;">The Tirumala TVS Legacy</h2>
-                    <p style="margin-bottom: 25px; line-height: 1.8;">Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We deliver the "Racing DNA" experience to every customer.</p>
+                    <p style="margin-bottom: 25px; line-height: 1.8;">Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We are dedicated to delivering the "Racing DNA" experience to every customer.</p>
                     <a href="about.html" class="btn btn-primary">Read More About Us</a>
                 </div>
                 <div class="welcome-image">
@@ -195,6 +195,63 @@
                     <span class="award-icon">⭐</span>
                     <h3>India Design Mark 2023</h3>
                     <p>Best Design Project - <strong>TVS Ronin</strong></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding bg-light">
+        <div class="container">
+            <div class="text-center section-header">
+                <h2>Happy Riders</h2>
+                <p>What our customers say about Tirumala TVS.</p>
+            </div>
+            
+            <div class="grid-3">
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Excellent service! Bought my Ntorq 125 here. The delivery was on time and the staff explained all features clearly."</p>
+                    <div class="review-author">- Rahul K.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Best showroom in Bidarahalli. Very transparent pricing and quick loan approval process. Highly recommended!"</p>
+                    <div class="review-author">- Priya S.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Got my iQube electric scooter. The team guided me on the subsidy process very well."</p>
+                    <div class="review-author">- Sneha R.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★☆</div>
+                    <p class="review-text">"Service center is good. They picked up my Apache 160 for servicing and dropped it back in the evening. Convenient."</p>
+                    <div class="review-author">- Amit V.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Purchased the new Jupiter 110. The mileage is amazing and the boot space is huge. Thanks Tirumala TVS team!"</p>
+                    <div class="review-author">- Karthik G.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Friendly staff and good ambience. They let me take a long test drive of the Ronin before I decided to buy."</p>
+                    <div class="review-author">- Mohammed I.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"Bought a Scooty Zest for my daughter. The process was smooth and they gave us a good deal on accessories."</p>
+                    <div class="review-author">- Anjali M.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★★</div>
+                    <p class="review-text">"I was confused between Raider and Apache. The sales executive explained the differences well. Went with Raider!"</p>
+                    <div class="review-author">- Vikram R.</div>
+                </div>
+                <div class="review-card">
+                    <div class="review-stars">★★★★☆</div>
+                    <p class="review-text">"Good stock of spare parts. I found genuine parts for my old Jupiter here which were not available elsewhere."</p>
+                    <div class="review-author">- Suresh B.</div>
                 </div>
             </div>
         </div>
