--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>Your Authorized TVS Main Dealership in Bidarahalli, Bangalore.</p>
             <div class="hero-buttons">
                 <a href="models.html" class="btn btn-primary">Explore Inventory</a>
-                <a href="contact.html" class="btn btn-outline" style="color:white; border-color:white;">Visit Showroom</a>
+                <a href="contact.html" class="btn btn-outline" style="color:white; border-color:white; box-shadow: inset 0 0 0 2px white;">Visit Showroom</a>
             </div>
         </div>
     </section>
@@ -89,7 +89,7 @@
                 <div class="welcome-text">
                     <span style="font-weight: bold; background: rgba(11, 35, 81, 0.1); color: var(--primary); padding: 5px 15px; border-radius: 30px; font-size: 0.85rem; letter-spacing: 1px;">AUTHORIZED DEALER</span>
                     <h2 style="font-family: 'Oswald'; font-size: 3rem; margin: 20px 0; color: var(--primary); text-transform: uppercase;">The Tirumala TVS Legacy</h2>
-                    <p style="margin-bottom: 25px; line-height: 1.8;">Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We are dedicated to delivering the "Racing DNA" experience to every customer.</p>
+                    <p style="margin-bottom: 25px; line-height: 1.8;">Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We are dedicated to delivering the "Racing DNA" experience.</p>
                     <a href="about.html" class="btn btn-primary">Read More About Us</a>
                 </div>
                 <div class="welcome-image">
@@ -105,7 +105,6 @@
                 <h2>6 Hot Selling Vehicles</h2>
                 <p>Our customers' favorite rides.</p>
             </div>
-            
             <div class="grid-3">
                 <a href="models/jupiter113.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
@@ -206,7 +205,6 @@
                 <h2>Happy Riders</h2>
                 <p>What our customers say about Tirumala TVS.</p>
             </div>
-            
             <div class="grid-3">
                 <div class="review-card">
                     <div class="review-stars">★★★★★</div>
@@ -225,12 +223,12 @@
                 </div>
                 <div class="review-card">
                     <div class="review-stars">★★★★☆</div>
-                    <p class="review-text">"Service center is good. They picked up my Apache 160 for servicing and dropped it back in the evening. Convenient."</p>
+                    <p class="review-text">"Service center is good. They picked up my Apache 160 for servicing and dropped it back in the evening."</p>
                     <div class="review-author">- Amit V.</div>
                 </div>
                 <div class="review-card">
                     <div class="review-stars">★★★★★</div>
-                    <p class="review-text">"Purchased the new Jupiter 110. The mileage is amazing and the boot space is huge. Thanks Tirumala TVS team!"</p>
+                    <p class="review-text">"Purchased the new Jupiter 110. The mileage is amazing and the boot space is huge. Thanks Tirumala TVS!"</p>
                     <div class="review-author">- Karthik G.</div>
                 </div>
                 <div class="review-card">
