--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="about.html" style="color: var(--primary); font-weight:bold;">About Us</a></li>
+                    <li class="nav-item"><a href="about.html" style="color: var(--accent);">About Us</a></li>
                     <li class="nav-item"><a href="models.html">All Models</a></li>
                     <li class="nav-item"><a href="contact.html">Contact</a></li>
                 </ul>
@@ -33,15 +33,16 @@
 
     <div class="section-padding">
         <div class="container">
-            <div class="welcome-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center;">
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center;" class="welcome-grid">
                 <div class="welcome-text">
                     <span style="font-weight: bold; background: rgba(11, 35, 81, 0.1); color: var(--primary); padding: 5px 15px; border-radius: 30px; font-size: 0.85rem; letter-spacing: 1px;">SINCE 2010</span>
                     <h2 style="font-family: 'Oswald'; font-size: 3rem; margin: 20px 0; color: var(--primary); text-transform: uppercase;">About Tirumala TVS</h2>
                     <p style="margin-bottom: 25px; line-height: 1.8;">Tirumala TVS is a premier authorized dealership for TVS Motor Company located in Bidarahalli, Bangalore. We pride ourselves on customer satisfaction, transparent dealings, and superior after-sales service.</p>
                     <p style="margin-bottom: 25px; line-height: 1.8;">Our state-of-the-art showroom showcases the entire range of TVS two-wheelers, from the sporty Apache series to the family-friendly Jupiter. Our service center is equipped with the latest tools and certified technicians to keep your vehicle in top condition.</p>
+                    <a href="contact.html" class="btn btn-primary">Visit Our Showroom</a>
                 </div>
                 <div class="welcome-image">
-                    <img src="assets/apache160.jpg" alt="Tirumala TVS Team" style="border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); width: 100%;">
+                    <img src="assets/apache160.jpg" alt="Tirumala TVS Team" style="border-radius: 12px; box-shadow: var(--shadow-pop); width: 100%;">
                 </div>
             </div>
         </div>
@@ -56,7 +57,7 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="models.html">All Models</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html">Home</a></li><li><a href="service.html">Book Service</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
