--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a href="index.html">Home</a></li>
                     <li class="nav-item"><a href="models.html">All Models</a></li>
                     <li class="nav-item"><a href="service.html">Services</a></li>
-                    <li class="nav-item"><a href="contact.html" style="color: var(--primary); font-weight:bold;">Contact</a></li>
+                    <li class="nav-item"><a href="contact.html" style="color: var(--accent);">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -39,20 +39,20 @@
             </div>
 
             <div class="grid-3" style="align-items: start;">
-                <div class="clean-card" style="padding: 30px; text-align: left;">
-                    <h3 style="color: var(--primary);">Showroom Address</h3>
-                    <p style="margin-bottom: 20px;">Tirumala TVS, Main Road,<br>Bidarahalli, Bangalore - 560049</p>
+                <div class="clean-card" style="padding: 40px; text-align: left;">
+                    <h3 style="color: var(--primary); font-size: 1.5rem; margin-bottom: 20px;">Showroom Address</h3>
+                    <p style="margin-bottom: 30px; font-size: 1.1rem;">Tirumala TVS, Main Road,<br>Bidarahalli, Bangalore - 560049</p>
                     
-                    <h3 style="color: var(--primary);">Phone</h3>
-                    <p><strong>Sales:</strong> <a href="tel:+919964946512" style="color:var(--accent);">+91 99649 46512</a></p>
-                    <p style="margin-bottom: 20px;"><strong>Service:</strong> <a href="tel:+919964946511" style="color:var(--accent);">+91 99649 46511</a></p>
+                    <h3 style="color: var(--primary); font-size: 1.5rem; margin-bottom: 20px;">Phone</h3>
+                    <p style="margin-bottom: 10px;"><strong>Sales:</strong> <a href="tel:+919964946512" style="color:var(--accent); font-weight:700;">+91 99649 46512</a></p>
+                    <p style="margin-bottom: 30px;"><strong>Service:</strong> <a href="tel:+919964946511" style="color:var(--accent); font-weight:700;">+91 99649 46511</a></p>
                     
-                    <h3 style="color: var(--primary);">Email</h3>
-                    <p>tirumalatvs716@gmail.com</p>
+                    <h3 style="color: var(--primary); font-size: 1.5rem; margin-bottom: 20px;">Email</h3>
+                    <p style="font-size: 1.1rem;">tirumalatvs716@gmail.com</p>
                 </div>
 
-                <div class="clean-card" style="grid-column: span 2; height: 400px; padding: 0;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.188496283734!2d77.70997737507736!3d13.023665987296488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae106655555555%3A0x6666666666666666!2sBidarahalli%2C%20Bengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <div class="clean-card" style="grid-column: span 2; height: 100%; min-height: 450px; padding: 0;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.1883942363!2d77.7291!3d13.0237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDAxJzI1LjMiTiA3N8KwNDMnNDQuOCJF!5e0!3m2!1sen!2sin!4v1625555555555!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="models.html">All Models</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html">Home</a></li><li><a href="service.html">Book Service</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
