--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html">Home</a></li>
                     <li class="nav-item"><a href="models.html">All Models</a></li>
-                    <li class="nav-item"><a href="service.html" style="color: var(--primary); font-weight:bold;">Services</a></li>
+                    <li class="nav-item"><a href="service.html" style="color: var(--accent);">Services</a></li>
                     <li class="nav-item"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="models.html">All Models</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html">Home</a></li><li><a href="service.html">Book Service</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
