--- a/service.html
+++ b/service.html
@@ -16,7 +16,6 @@
             <div class="header-btn-group">
                 <a href="service.html" class="btn-header">Book Service</a>
                 <a href="quotation.html" class="btn-header">Get Quotation</a>
-                <a href="testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
         <div class="nav-bar" id="navMenu">
@@ -39,26 +38,43 @@
             </div>
 
             <form class="service-form">
-                <label>Your Name</label><input type="text" placeholder="Enter Full Name" required>
-                <label>Phone Number</label><input type="tel" placeholder="Enter Mobile Number" required>
-                <label>Vehicle Model</label>
-                <select>
-                    <option>Select Vehicle</option>
-                    <option>Jupiter</option>
-                    <option>Ntorq</option>
-                    <option>Apache</option>
-                    <option>Raider</option>
-                    <option>iQube</option>
-                    <option>XL100</option>
-                </select>
-                <label>Service Type</label>
-                <select>
-                    <option>General Service</option>
-                    <option>Oil Change</option>
-                    <option>Repair / Breakdown</option>
-                    <option>Wash & Polish</option>
-                </select>
-                <label>Preferred Date</label><input type="date" required>
+                <div class="form-group">
+                    <label>Your Name</label>
+                    <input type="text" placeholder="Enter Full Name" required>
+                </div>
+                
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="tel" placeholder="Enter Mobile Number" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Vehicle Model</label>
+                    <select>
+                        <option>Select Vehicle</option>
+                        <option>Jupiter</option>
+                        <option>Ntorq</option>
+                        <option>Apache</option>
+                        <option>Raider</option>
+                        <option>iQube</option>
+                        <option>XL100</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Service Type</label>
+                    <select>
+                        <option>General Service</option>
+                        <option>Oil Change</option>
+                        <option>Repair / Breakdown</option>
+                        <option>Wash & Polish</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Preferred Date</label>
+                    <input type="date" required>
+                </div>
                 
                 <button type="submit" class="btn-submit-service">Confirm Appointment</button>
 
@@ -69,20 +85,18 @@
                     <p><strong>Step 3:</strong> Drop vehicle & relax.</p>
                 </div>
             </form>
-        </div>
+            </div>
     </div>
 
     <footer>
         <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div>tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div>Sales: +91 99649 46512</div></div>
+            <div class="container text-center">
+                <div style="font-size: 1.2rem; color: white;">Need Help? Call Sales: <strong>+91 99649 46512</strong></div>
             </div>
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html">Home</a></li><li><a href="service.html">Book Service</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
                 <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
         </div>
