--- a/quotation.html
+++ b/quotation.html
@@ -38,19 +38,37 @@
             </div>
 
             <form class="service-form">
-                <label>Your Name</label><input type="text" placeholder="Enter Full Name" required>
-                <label>Phone Number</label><input type="tel" placeholder="Enter Mobile Number" required>
-                <label>Select Model</label>
-                <select>
-                    <option>Select Vehicle</option>
-                    <option>Jupiter</option>
-                    <option>Ntorq</option>
-                    <option>Apache</option>
-                    <option>Raider</option>
-                    <option>iQube</option>
-                    <option>XL100</option>
-                </select>
-                <label>Message (Optional)</label><textarea rows="3" placeholder="Any specific requirements?"></textarea>
+                <div class="form-group">
+                    <label>Your Name</label>
+                    <input type="text" placeholder="Enter Full Name" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="tel" placeholder="Enter Mobile Number" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Select Model</label>
+                    <select>
+                        <option>Select Vehicle</option>
+                        <option>Jupiter 110</option>
+                        <option>Jupiter 125</option>
+                        <option>Ntorq 125</option>
+                        <option>Apache RTR 160 4V</option>
+                        <option>Apache RTR 200 4V</option>
+                        <option>Raider 125</option>
+                        <option>Ronin</option>
+                        <option>iQube Electric</option>
+                        <option>XL100</option>
+                        <option>Scooty Zest</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Message (Optional)</label>
+                    <textarea rows="3" placeholder="Any specific requirements (e.g., color, accessories)?"></textarea>
+                </div>
                 
                 <button type="submit" class="btn-submit-service">Request Quote</button>
 
@@ -66,10 +84,7 @@
 
     <footer>
         <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div>tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div>Sales: +91 99649 46512</div></div>
-            </div>
+            <div class="container text-center"><div style="color:white; font-size:1.2rem;">Sales Hotline: +91 99649 46512</div></div>
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
