--- a/testdrive.html
+++ b/testdrive.html
@@ -38,18 +38,34 @@
             </div>
 
             <form class="service-form">
-                <label>Your Name</label><input type="text" placeholder="Enter Full Name" required>
-                <label>Phone Number</label><input type="tel" placeholder="Enter Mobile Number" required>
-                <label>Select Model</label>
-                <select>
-                    <option>Select Vehicle</option>
-                    <option>Apache RTR 160 4V</option>
-                    <option>TVS Raider 125</option>
-                    <option>TVS Ronin</option>
-                    <option>TVS Ntorq 125</option>
-                    <option>TVS Jupiter 125</option>
-                </select>
-                <label>Preferred Date</label><input type="date" required>
+                <div class="form-group">
+                    <label>Your Name</label>
+                    <input type="text" placeholder="Enter Full Name" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="tel" placeholder="Enter Mobile Number" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Select Model</label>
+                    <select>
+                        <option>Select Vehicle</option>
+                        <option>Apache RTR 160 4V</option>
+                        <option>Apache RR 310</option>
+                        <option>TVS Raider 125</option>
+                        <option>TVS Ronin</option>
+                        <option>TVS Ntorq 125</option>
+                        <option>TVS Jupiter 125</option>
+                        <option>TVS iQube</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Preferred Date</label>
+                    <input type="date" required>
+                </div>
                 
                 <button type="submit" class="btn-submit-service">Book Test Ride</button>
 
@@ -65,10 +81,7 @@
 
     <footer>
         <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div>tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div>Sales: +91 99649 46512</div></div>
-            </div>
+            <div class="container text-center"><div style="color:white; font-size:1.2rem;">Sales Hotline: +91 99649 46512</div></div>
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
