--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
     <title>Contact Us | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        @media (min-width: 900px) {
+            .contact-map-card { grid-column: span 2; }
+        }
+    </style>
 </head>
 <body>
 
@@ -38,7 +43,7 @@
                 <p>Visit our showroom or contact us for any queries.</p>
             </div>
 
-            <div class="grid-3" style="align-items: start;">
+            <div class="grid-3" style="align-items: stretch;">
                 <div class="clean-card" style="padding: 40px; text-align: left;">
                     <h3 style="color: var(--primary); font-size: 1.5rem; margin-bottom: 20px;">Showroom Address</h3>
                     <p style="margin-bottom: 30px; font-size: 1.1rem;">Tirumala TVS, Main Road,<br>Bidarahalli, Bangalore - 560049</p>
@@ -51,8 +56,8 @@
                     <p style="font-size: 1.1rem;">tirumalatvs716@gmail.com</p>
                 </div>
 
-                <div class="clean-card" style="grid-column: span 2; height: 100%; min-height: 450px; padding: 0;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.1883942363!2d77.7291!3d13.0237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDAxJzI1LjMiTiA3N8KwNDMnNDQuOCJF!5e0!3m2!1sen!2sin!4v1625555555555!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <div class="clean-card contact-map-card" style="height: 100%; min-height: 450px; padding: 0;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.35123456789!2d77.654321!3d13.012345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDAwJzQ0LjQiTiA3N8KwMzknMTUuNiJF!5e0!3m2!1sen!2sin!4v1600000000000!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
@@ -60,10 +65,7 @@
 
     <footer>
         <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div>tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div>Sales: +91 99649 46512</div></div>
-            </div>
+            <div class="container text-center"><div style="color:white; font-size:1.2rem;">Sales Hotline: +91 99649 46512</div></div>
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
