--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         </div>
     </div>
 
+    <section class="container" style="margin-bottom: 60px; margin-top: 20px;">
+        <div style="border-radius: 16px; overflow: hidden; box-shadow: var(--shadow-soft);">
+            <img src="assets/promo-banner.jpg" alt="Special Offer" style="width: 100%; height: auto; display: block;">
+        </div>
+    </section>
     <section class="section-padding">
         <div class="container">
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center;" class="welcome-grid">
