--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html" style="color: var(--accent);">Home</a></li>
-                    <li class="nav-item"><a href="models.html">All Models</a></li>
+                    <li class="nav-item"><a href="about.html">About Us</a></li> <li class="nav-item"><a href="models.html">All Models</a></li>
                     <li class="nav-item">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
@@ -274,7 +274,7 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><div class="footer-links"><a href="about.html">About Us</a><a href="contact.html">Contact Us</a><a href="service.html">Book Service</a><a href="models.html">All Models</a></div></div>
+                <div class="footer-col"><h4>Quick Links</h4><div class="footer-links"><a href="index.html">Home</a><a href="about.html">About Us</a><a href="service.html">Book Service</a><a href="models.html">All Models</a></div></div>
                 <div class="footer-col"><h4>Models</h4><div class="footer-links"><a href="models.html#motorcycles">Motorcycles</a><a href="models.html#scooters">Scooters</a></div></div>
                 <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
